--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,22 @@
 
 kramdown:
   hard_wrap: true
+
+posts_path: /blog
+permalink: "/blog/:year/:month/:day/:title"
+
+collections:
+  pages:
+    output: true
+    permalink: /:path/
+
+defaults:
+  - scope:
+      path: ""
+    values:
+      layout: main
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: post
