--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ kramdown:
   hard_wrap: true
 
 posts_path: /blog
-permalink: "/blog/:year/:month/:day/:title"
+permalink: "/blog/:title"
 
 collections:
   pages:
